Update the splash screen :(

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,30 @@
     </header>
 
     <main>
-      <h1>
+      <h1>Spotifeed has been discontinued.</h1>
+      <p>
+        Unfortunately, Spotify has made critical changes to their podcast
+        download infrastructure that prevent Spotifeed from working. While
+        Spotifeed can still access the show and episode data, the downloads
+        themselves are no longer accessible.
+        <a href="https://www.youtube.com/watch?v=3at_Ev2kOoI"
+          >He's dead, Jim.</a
+        >
+      </p>
+      <p>
+        The technical details: Spofiy's anon-podcast.scdn.co server has been
+        discontinued. This served as an unauthenticated proxy server for podcast
+        episode audio. They have switched to streaming directly from the
+        podcast's source server. For non-exclusive podcasts, that is simply
+        whatever is in the RSS feed (in which case, you can access those
+        podcasts directly without Spotifeed's help). For exclusive podcasts,
+        Spotify is using their audio4-fa.scdn.co server, which appears to be
+        using an HLS stream that is not usable by general HTTP clients. That
+        means Spotifeed would have to re-host the podcast audio files to make
+        those downloadable, which is not feasible or legal.
+      </p>
+
+      <!-- <h1>
         Spotifeed is a simple service to convert Spotify podcasts to RSS feeds.
       </h1>
 
@@ -132,7 +155,7 @@
         href="https://spotifeed.timdorr.com/4rOoJ6Egrf8K2IrywzwOMk"
         id="spotifeed_url"
         >https://spotifeed.timdorr.com/4rOoJ6Egrf8K2IrywzwOMk</a
-      >
+      > -->
 
       <footer>
         Spotify® is a trademark of Spotify AB which does not sponsor, authorize,
@@ -141,7 +164,7 @@
     </main>
   </body>
 
-  <script>
+  <!-- <script>
     const spotifyURL = document.getElementById('spotify_url')
     const spotifeedURL = document.getElementById('spotifeed_url')
 
@@ -159,5 +182,5 @@
 
     spotifyURL.addEventListener('change', urlChanged)
     spotifyURL.addEventListener('keyup', urlChanged)
-  </script>
+  </script> -->
 </html>
